# LIS

./: .Rhistory  CMakeLists.txt  input_example.txt  lis_test.sh  test_output.txt
include/: act.h  animal.h  lis.h  move.h  population.h  random.h
src/: act.cpp  animal.cpp  lis.cpp  main.cpp  move.cpp  population.cpp  random.cpp
